objects/LLC_BI__Collateral_Group__c.object
<CustomObject>
    <description>This junction object links individual collateral records together to form a group of collateral and contains information about how each piece of collateral relates to the group.</description>
    <fields>
        <fullName>LLC_BI__Associated_Collateral__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this required lookup to indicate the collateral management record that is a part of the group.</description>
        <label>Associated Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Collateral Groups</relationshipLabel>
        <relationshipName>Collateral_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this required lookup to indicate the group to which the collateral management record is associated.</description>
        <label>Collateral Group</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This value does not exist or the type and subtype pairing of the collateral does not equal group and the group_type field is null.</errorMessage>
            <filterItems>
                <field>LLC_BI__Collateral__c.LLC_BI__Collateral_Type__r.LLC_BI__Group_Type__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>You can only associate this record with a collateral group, where the type and subtype pairing of the collateral equals group and the group_type field is not null.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Associated Collateral</relationshipLabel>
        <relationshipName>Associated_Collateral</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Restricted_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The user populates this currency field with the value available to the group. By default, it is blank. The system respects the populated value when the Restricted field is set to true.</description>
        <inlineHelpText>To restrict the value available to the group, enter the value you want to allocate to the group.</inlineHelpText>
        <label>Restricted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user populates this optional checkbox to restrict the collateral value that is available to the group. By default, it is not selected.</description>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Collateral Group</label>
    <nameField>
        <displayFormat>CG-{000000000}</displayFormat>
        <label>Collateral Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>